--- a/wildfriendfinder/pubspec.yaml
+++ b/wildfriendfinder/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   cloud_firestore: any
   firebase_core_platform_interface: any
+  http: any
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
