--- a/wildfriendfinder/android/app/src/main/AndroidManifest.xml
+++ b/wildfriendfinder/android/app/src/main/AndroidManifest.xml
@@ -30,6 +30,10 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyAZRAhkvtzXpEfkPU4WW4UPTyz8RY1dyw4"
+            />
     </application>
     <!-- Required to query activities that can process text, see:
          https://developer.android.com/training/package-visibility and
