--- a/wildfriendfinder/pubspec.yaml
+++ b/wildfriendfinder/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   cloud_firestore: any
   firebase_core_platform_interface: any
   http: any
+  google_maps_flutter: any
+  geocoding: any
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
