--- a/wildfriendfinder/pubspec.yaml
+++ b/wildfriendfinder/pubspec.yaml
@@ -69,6 +69,7 @@ flutter:
     - assets/dog5.jpg
     - assets/dog6.jpg
     - assets/default.jpg
+    - assets/jsonFiles/petsListing.json
 
   # To add assets to your application, add an assets section, like this:
   # assets:
