--- a/wildfriendfinder/pubspec.yaml
+++ b/wildfriendfinder/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   http: any
   google_maps_flutter: any
   geocoding: any
+  intl: any
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
