--- a/wildfriendfinder/pubspec.yaml
+++ b/wildfriendfinder/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   google_maps_flutter: any
   geocoding: any
   intl: any
+  flutter_local_notifications: 19.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
